# petya_recovery

./: CMakeLists.txt  README.md  decryptor.cpp  decryptor.h  genetic.cpp  genetic.h  main.cpp  salsa.cpp  salsa.h  types.h
stage1_asm/: README.md  boot.asm
